--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
       <section class="section">
         <div class="container">
-          <h2 class="visually-hidden">Our Advantages</h2>
+          <h2 class="visually-hidden our-advantage-title">Our Advantages</h2>
           <ul class="advantages-list">
             <li class="advantages-item">
               <div class="svg-adv-container">
@@ -176,7 +176,7 @@
                       rel="noopener noreferrer"
                       aria-label="Link to Instagram"
                     >
-                      <svg class="social-icon" width="16" height="16">
+                      <svg class="svg-img" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -190,7 +190,7 @@
                       rel="noopener noreferrer"
                       aria-label="Link to Twitter"
                     >
-                      <svg class="social-icon" width="16" height="16">
+                      <svg class="svg-img" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
@@ -204,7 +204,7 @@
                       rel="noopener noreferrer"
                       aria-label="Link to Facebook"
                     >
-                      <svg class="social-icon" width="16" height="16">
+                      <svg class="svg-img" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
@@ -218,7 +218,7 @@
                       rel="noopener noreferrer"
                       aria-label="Link to Linkedin"
                     >
-                      <svg class="social-icon" width="16" height="16">
+                      <svg class="svg-img" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -249,7 +249,7 @@
                       rel="noopener noreferrer"
                       aria-label="Link to Instagram"
                     >
-                      <svg class="social-icon" width="16" height="16">
+                      <svg class="svg-img" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -263,7 +263,7 @@
                       rel="noopener noreferrer"
                       aria-label="Link to Twitter"
                     >
-                      <svg class="social-icon" width="16" height="16">
+                      <svg class="svg-img" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
@@ -277,7 +277,7 @@
                       rel="noopener noreferrer"
                       aria-label="Link to Facebook"
                     >
-                      <svg class="social-icon" width="16" height="16">
+                      <svg class="svg-img" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
@@ -322,7 +322,7 @@
                       rel="noopener noreferrer"
                       aria-label="Link to Instagram"
                     >
-                      <svg class="social-icon" width="16" height="16">
+                      <svg class="svg-img" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -336,7 +336,7 @@
                       rel="noopener noreferrer"
                       aria-label="Link to Twitter"
                     >
-                      <svg class="social-icon" width="16" height="16">
+                      <svg class="svg-img" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
@@ -350,7 +350,7 @@
                       rel="noopener noreferrer"
                       aria-label="Link to Facebook"
                     >
-                      <svg class="social-icon" width="16" height="16">
+                      <svg class="svg-img" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
@@ -364,7 +364,7 @@
                       rel="noopener noreferrer"
                       aria-label="Link to Linkedin"
                     >
-                      <svg class="social-icon" width="16" height="16">
+                      <svg class="svg-img" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -395,7 +395,7 @@
                       rel="noopener noreferrer"
                       aria-label="Link to Instagram"
                     >
-                      <svg class="social-icon" width="16" height="16">
+                      <svg class="svg-img" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -409,7 +409,7 @@
                       rel="noopener noreferrer"
                       aria-label="Link to Twitter"
                     >
-                      <svg class="social-icon" width="16" height="16">
+                      <svg class="svg-img" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
@@ -423,7 +423,7 @@
                       rel="noopener noreferrer"
                       aria-label="Link to Facebook"
                     >
-                      <svg class="social-icon" width="16" height="16">
+                      <svg class="svg-img" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
@@ -437,7 +437,7 @@
                       rel="noopener noreferrer"
                       aria-label="Link to Linkedin"
                     >
-                      <svg class="social-icon" width="16" height="16">
+                      <svg class="svg-img" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -452,7 +452,7 @@
 
       <!-- #region Our Portfolio -->
 
-      <section class="section">
+      <section class="section portfolio">
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
@@ -496,7 +496,7 @@
                 </p>
               </div>
               <div class="portfolio-container">
-                <h3 class="subtitle">Banking App</h3>
+                <h3 class="section-title">Banking App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
@@ -541,7 +541,7 @@
                 </p>
               </div>
               <div class="portfolio-container">
-                <h3 class="subtitle">Cashless Payment</h3>
+                <h3 class="section-title">Cashless Payment</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
@@ -586,7 +586,7 @@
                 </p>
               </div>
               <div class="portfolio-container">
-                <h3 class="subtitle">Meditation App</h3>
+                <h3 class="section-title">Meditation App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
@@ -631,7 +631,7 @@
                 </p>
               </div>
               <div class="portfolio-container">
-                <h3 class="subtitle">Taxi Service</h3>
+                <h3 class="section-title">Taxi Service</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
@@ -677,7 +677,7 @@
                 </p>
               </div>
               <div class="portfolio-container">
-                <h3 class="subtitle">Screen Illustrations</h3>
+                <h3 class="section-title">Screen Illustrations</h3>
                 <p class="portfolio-text">Design</p>
               </div>
             </li>
@@ -723,7 +723,7 @@
                 </p>
               </div>
               <div class="portfolio-container">
-                <h3 class="subtitle">Online Courses</h3>
+                <h3 class="section-title">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
